# bitchat-RTC

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
app/src/main/java/com/bitchat/android/mesh/: BluetoothGattClientManager.kt  BluetoothGattServerManager.kt  BluetoothMeshService.kt  BluetoothPacketBroadcaster.kt  MessageHandler.kt  PacketProcessor.kt
app/src/main/java/com/bitchat/android/model/: NoiseEncrypted.kt
app/src/main/java/com/bitchat/android/nostr/: NostrDirectMessageHandler.kt
app/src/main/java/com/bitchat/android/protocol/: BinaryProtocol.kt
app/src/main/java/com/bitchat/android/rtc/: AudioPlayer.kt  OpusWrapper.kt  RTCManager.kt
app/src/main/java/com/bitchat/android/ui/: ChatState.kt  CommandProcessor.kt  MessageManager.kt  PrivateChatManager.kt
